--- a/Assets/style.css
+++ b/Assets/style.css
@@ -6,36 +6,49 @@
 /*-------------header*/
 
 header {
+    float: left;
+    width: 100%;
+    overflow: auto;
+}
+
+.active {
+    font-size: 30px;
+}
+
+.navbar {
+    float: left;
     background-color: #030d2b;
-    height: 80px;
 
 }
 
-.nav-item {
-    padding: 10px;
+.navbar a {
+
+    padding: 15px;
+    color: #fac105;
+    text-decoration: none;
+    font-family: 'Lato', sans-serif;
+}
+
+.navbar a i {
+    width: 60px;
+    height: 60px;
+    padding: 24px 0;
+    font-size: 24px;
+    line-height: 14px;
+    border-radius: 50%;
+    color: #030d2b;
+    background: #fac105;
+    text-align: center;
     transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
     -webkit-transition: all 0.5s ease-in-out;
     -o-transition: all 0.5s ease-in-out;
 }
 
-.nav-item a {
-    font-family: 'Lato', sans-serif;
-    font-size: 1em;
+
+.navbar a i:hover {
     color: #fac105;
-    background-color: #030d2b;
-    text-decoration: none;
-
-}
-
-.nav-item:hover {
- opacity: 0.5;
-}
-
-.nav-item a i {
-    font-size: 48px;
-    color: white;
-    margin-top: 10px;
+    background: #030d2b;
 }
 
 /*-------------footer*/
