--- a/Assets/style.css
+++ b/Assets/style.css
@@ -89,3 +89,11 @@ footer {
     color: #fac105;
     background: #030d2b;
 }
+
+/*-------------media queries*/
+
+@media screen and (max-width: 500px){
+    .navbar a {
+  padding: 0;
+    }
+}
