--- a/assets/style.css
+++ b/assets/style.css
@@ -6,8 +6,12 @@
 /*---------------------------------------------------------header*/
 
 header {
+    background-color: #091711;
     width: 100%;
     overflow: auto;
+}
+.header-button {
+    position: fixed;
 }
 
 .active {
@@ -73,18 +77,15 @@ header {
 /*----------------------------------------------------------------facilities*/
 
 .facilities {
-   background-color: red; 
+    background-color: red;
 }
 
 .facilities-icon {
     float: right;
-    width: auto;
     font-size: 20px;
     font-family: 'Lato', sans-serif;
     color: white;
-    padding-top: 15px;
-    padding-left: 290px;
-    padding-right: 20px;
+    padding-left: 150px;
 }
 
 .facilities-icon i {
@@ -131,14 +132,43 @@ footer {
     background: #091711;
 }
 
-/*--------------------------------------------------------------------media queries*/
 
-@media screen and (max-width: 500px) {
-    .navbar a {
-        padding: 0;
-    }
+
+/*--------------------------------------------------------------------timetable*/
+
+.timetable {
+    background-image: url('../assets/images/barbell.jpg');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    font-family: 'Lato', sans-serif;
+    background-color: #091711;
+    color: white;
+    padding: 100px;
 }
 
-h5 {
-    font-size: 20px;
+.timetable-item {
+    background-color: rgb(245, 72, 29, 0.2);
+}
+
+/*--------------------------------------------------------------------modal*/
+
+.modal {
+    width: 300px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.form-group{
+    text-align: center;
+}
+
+.modal-content {
+    background-color: rgb(40, 173, 222, 0.5);
+}
+
+.modal-button {
+    position: fixed;
+    
 }
