--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap:100, 200, 300, 400, 500, 600, 700');
-.uppercase {
+. {
     text-transform: uppercase;
 }
 
@@ -18,6 +18,7 @@ header {
     font-size: 30px;
 }
 
+
 .navbar {
     display: inline-block;
     width: 100%;
@@ -34,11 +35,11 @@ header {
 }
 
 .navbar a i {
-    width: 60px;
-    height: 60px;
-    padding: 24px 0;
-    font-size: 24px;
-    line-height: 14px;
+    width: 45px;
+    height: 45px;
+    padding: 18px 0;
+    font-size: 18px;
+    line-height: 11px;
     border-radius: 50%;
     color: #091711;
     background: #d2de2c;
@@ -48,7 +49,6 @@ header {
     -webkit-transition: all 0.5s ease-in-out;
     -o-transition: all 0.5s ease-in-out;
 }
-
 
 .navbar a i:hover {
     color: #d2de2c;
@@ -85,7 +85,8 @@ header {
     font-size: 20px;
     font-family: 'Lato', sans-serif;
     color: white;
-    padding-left: 150px;
+    padding-right: 50px;
+    padding-top: 10px;
 }
 
 .facilities-icon i {
@@ -98,12 +99,12 @@ footer {
     font-family: 'Lato', sans-serif;
     color: #d2de2c;
     background-color: #091711;
-    padding-top: 10px;
+    padding-top: 20px;
 }
 
 .footer-section {
     text-align: right;
-    font-weight: 300;
+    font-size: 13px;
 
 }
 
